# formula-manipulator

./: formula.hs  haskell-logic.cabal  readme.md
src/: Formula.hs  Main.hs  formula.hs  main.hs
